--- a/proyecto/frontend/package.json
+++ b/proyecto/frontend/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "firebase": "^10.14.0",
+    "jwt-decode": "^4.0.0",
     "react-bootstrap": "^2.10.5",
     "react-router-dom": "^6.26.2"
   },
