--- a/proyecto/backend/package.json
+++ b/proyecto/backend/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "setup": "npx prisma migrate deploy && npx prisma generate",
+    "start": "npm run setup && node src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -21,7 +22,7 @@
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
-    "prisma": "^5.21.1",
+    "prisma": "^5.22.0",
     "sequelize": "^6.37.4"
   },
   "description": "",
