--- a/proyecto/frontend/package.json
+++ b/proyecto/frontend/package.json
@@ -4,11 +4,15 @@
     "bootstrap": "^5.3.3",
     "firebase": "^10.14.0",
     "jwt-decode": "^4.0.0",
+    "proyecto": "file:..",
     "react-bootstrap": "^2.10.5",
     "react-router-dom": "^6.26.2"
   },
   "proxy": "http://localhost:5000/",
   "devDependencies": {
     "vite": "^5.4.8"
+  },
+  "scripts": {
+    "setup": "npm run setup-env --prefix frontend/app && npm run setup-env --prefix backend && npm install --prefix frontend/app && npm install --prefix backend"
   }
 }
