--- a/proyecto/frontend/app/package.json
+++ b/proyecto/frontend/app/package.json
@@ -17,6 +17,7 @@
     "proyecto": "file:../..",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^5.4.10",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
