--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -3,12 +3,13 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "setup": "npm install --prefix backend && npm install --prefix frontend/app",
+        "setup": "npm install && npm install --prefix backend && npm install --prefix frontend/app",
         "start:backend": "npm run start --prefix backend",
         "start:frontend": "npm run dev --prefix frontend/app",
-        "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
+        "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\""    
     },
     "devDependencies": {
-        "concurrently": "^8.2.2"
+        "concurrently": "^8.2.2",
+        "vite": "^5.4.10"
     }
 }
