--- a/proyecto/frontend/app/package.json
+++ b/proyecto/frontend/app/package.json
@@ -12,6 +12,9 @@
     "setup": "npm run setup-env --prefix frontend/app && npm run setup-env --prefix backend && npm install --prefix frontend/app && npm install --prefix backend"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.6",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
@@ -19,7 +22,8 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
