--- a/proyecto/backend/package.json
+++ b/proyecto/backend/package.json
@@ -21,12 +21,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "prisma": "^5.22.0",
     "proyecto": "file:..",
-    "sequelize": "^6.37.4"
+    "sequelize": "^6.37.4",
+    "xlsx": "^0.18.5"
   },
   "description": "",
   "proxy": "http://localhost:5000/"
