--- a/proyecto/frontend/app/package.json
+++ b/proyecto/frontend/app/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.456.0",
     "proyecto": "file:../..",
     "react": "^18.3.1",
