--- a/proyecto/frontend/app/package.json
+++ b/proyecto/frontend/app/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.456.0",
     "proyecto": "file:../..",
     "react": "^18.3.1",
