--- a/proyecto/backend/.env.example
+++ b/proyecto/backend/.env.example
@@ -1,3 +1,3 @@
 
-DATABASE_URL="postgresql://admin:juan123@localhost:5432/data_salfa2?schema=public"
+DATABASE_URL="postgresql://admin:juan123@localhost:5432/data_salfa?schema=public"
 JWT_SECRET=tu_secreto_aqui
